--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
+    "seedrandom": "^3.0.5",
     "sequelize": "^6.25.3"
   }
 }
