--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   "author": "joeazure",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.10.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsdom": "^20.0.2",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
+    "p5": "^1.5.0",
     "seedrandom": "^3.0.5",
-    "sequelize": "^6.25.3"
+    "sequelize": "^6.25.5",
+    "webp-converter": "^2.3.3"
   }
 }
