--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "joeazure",
   "license": "ISC",
   "dependencies": {
+    "argparse": "^2.0.1",
     "canvas": "^2.10.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
