--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,10 +12,12 @@
                 "<node_internals>/**"
             ],
             "program": "${workspaceFolder}/scripts/bulk_render.js",
-            "args": ["StudioUltra",
-                     "/Volumes/G-RAID1/qql-outputs/render11",
-                     "0xED884d09749a358B31B384876C086c4bd8890287",
-                     "qql_117"
+            "args": [ 
+                        "--output", "/Users/jazure/tmp/qql-test",
+                        "--wallet", "0xED884d09749a358B31B384876C086c4bd8890287",
+                        "--traits", "qql_117",
+                        "--render_host", "StudioUltra",
+                        5
                     ]
         }
     ]
