--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,10 +13,11 @@
             ],
             "program": "${workspaceFolder}/scripts/bulk_render.js",
             "args": [ 
-                        "--output", "/Users/jazure/tmp/qql-test",
+                        "--output", "/Volumes/G-RAID1/qql-outputs/render12",
                         "--wallet", "0xED884d09749a358B31B384876C086c4bd8890287",
-                        "--traits", "qql_117",
+                        "--traits", "qql_109",
                         "--render_host", "StudioUltra",
+                        "--use_db", "true",
                         5
                     ]
         }
