--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,11 +14,12 @@
             "program": "${workspaceFolder}/scripts/bulk_render.js",
             "args": [ 
                         "--output", "/Volumes/G-RAID1/qql-outputs/render12",
-                        "--wallet", "0xED884d09749a358B31B384876C086c4bd8890287",
-                        "--traits", "qql_109",
+                        "--wallet", "0x37B15E06Ad0F4520CCDd8c2557D2a28DA0354f7D",
+                        "--traits", "qql_93",
+                        // "--palette_override", "Seattle",
                         "--render_host", "StudioUltra",
                         "--use_db", "true",
-                        5
+                        1000
                     ]
         }
     ]
