--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "license": "ISC",
   "dependencies": {
     "argparse": "^2.0.1",
+    "axios": "^1.1.3",
     "canvas": "^2.10.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsdom": "^20.0.2",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
+    "node-fetch": "^3.3.0",
     "p5": "^1.5.0",
     "qql-headless": "github:qql-art/qql-headless",
     "seedrandom": "^3.0.5",
