--- a/app/config/config.json
+++ b/app/config/config.json
@@ -3,7 +3,7 @@
       "username": "qql",
       "password": "qql",
       "database": "qql",
-      "host": "localhost",
+      "host": "StudioUltra.local",
       "dialect": "mysql",
       "logging": false
     },
