--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "qql-headless": "github:qql-art/qql-headless",
     "seedrandom": "^3.0.5",
     "sequelize": "^6.25.5",
+    "sharp": "^0.31.3",
     "webp-converter": "^2.3.3"
   }
 }
